# Crypttraject-Software

./: .dockerignore  .env.example  .gitignore  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-server.txt  requirements.txt
.github/workflows/: release.yml
client/crypttraject_client/: __init__.py  cli.py  decrypt.py  encrypt.py  http_client.py  keys.py  minhash.py
client/crypttraject_client/adapters/: __init__.py  base.py  csv_adapter.py  features.py  json_adapter.py  plt_adapter.py
client/crypttraject_client/gui/: __init__.py  __main__.py  main_window.py  state.py  workers.py
client/crypttraject_client/gui/pages/: __init__.py  cluster_page.py  config_page.py  encrypt_page.py  map_page.py  results_page.py  run_page.py  source_page.py
docker/: Caddyfile  nginx.conf  server.Dockerfile  server.prod.Dockerfile  web.Dockerfile
downloads/: README.md
packaging/: build_binaries.py  crypttraject.spec  entry_cli.py  entry_gui.py  installer.iss
server/crypttraject_server/: __init__.py  api.py  homomorphic.py  schemas.py  session.py
shared/crypttraject_shared/: __init__.py  bfv_params.py  codec.py  wire.py
web/: index.html  package.json
web/src/: App.jsx
