[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypttraject"
version = "0.1.0"
description = "Privacy-preserving record clustering via BFV homomorphic encryption."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["shared", "client", "server"]

[project.scripts]
crypttraject-client = "crypttraject_client.cli:main"

[project.gui-scripts]
crypttraject-gui = "crypttraject_client.gui.main_window:run"
